# iron-mountrouter

./: .gitignore  Cargo.toml  LICENSE  README.md  search-index.js
examples/: method_picker.html  method_picker.rs  router.html  router.rs  simple.rs
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/iron/middleware/: trait.Handler.js
implementors/std/error/: trait.Error.js
implementors/typemap/: trait.Key.js
iron_mountrouter/: index.html  macro.picker!.html  sidebar-items.js  struct.MethodPicker.html  struct.NoMethod.html  struct.NoRoute.html  struct.OriginalUrl.html  struct.Router.html  struct.StrippedUrl.html  type.Params.html
iron_mountrouter/method_picker/: sidebar-items.js  struct.MethodPicker.html  struct.NoMethod.html
iron_mountrouter/mount_router/: sidebar-items.js  struct.NoRoute.html  struct.OriginalUrl.html  struct.Router.html  struct.StrippedUrl.html  type.Params.html
src/: lib.rs  method_picker.rs  mount_router.rs
src/iron_mountrouter/: lib.rs.html  method_picker.rs.html  mount_router.rs.html
